# price-predictor

./: .gitignore  CLAUDE.md  README.md  forge-domain-hierarchies.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
forge-connector/: README.md  pom.xml
resources/: CARD_SCRIPTING_REFERENCE.md
specs/001-card-price-predictor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-card-price-predictor/checklists/: requirements.md
specs/001-card-price-predictor/contracts/: cli.md
specs/002-forge-api-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-cheapest-printing-price/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-cardmarket-eur-pricing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-card-eval-endpoints/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-card-script-parsing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-pipeline-cli/: spec.md
specs/007-transformer-model-arch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-mtg-custom-tokenizer/: spec.md
specs/009-transformer-model-arch/: spec.md
src/price_predictor/: __main__.py
tests/: conftest.py
tests/fixtures/: allprices_sample.json  allprintings_sample.json
tests/integration/: test_convert_cli.py  test_end_to_end.py  test_eval_integration.py  test_server_integration.py  test_transformer_training.py
(+120 files in other folders)
